--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<main id="job" class="accio">
-		<p class="hello-accio">Hello Accio Job</p>
+	<main id="job" class="accio" style="height:"500px>
+		<p class="hello-accio" style="color: white; margin-left:32px; padding:"10px">Hello Accio Job</p>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
